# ptah

./: .gitignore  README-DEV.md  README.md  pyproject.toml  setup.py
doc/: loading.md
ptah/: __init__.py  __main__.py  album.py  font.py  format.py  gprops.py  graph.py  io.py  latex.py  pages.py  parser.py  props.py  text.py  types.py  util.py
ptah/wiki/: __init__.py  markdown.py
test/: back.ptah  border.ptah  colors.ptah  default.ptah  font-test.ptah  parser.py  paths.ptah  shadow.ptah  styles.ptah  test.ptah  test.py  text.ptah
test/images/: linear-flat-abstract-lines-pattern_23-2148955379.avif
